# QFI-Opt

./: .black  .gitignore  LICENSE.txt  NOTICE  README.md  README.rst  benchmark_opt_methods.py  calculate_qfi_example.py  calculate_qfi_example_jax.py  dev-requirements.txt  dissipation.py  dissipation_.py  dissipation_jax.py  dissipation_pt.py  example_opt.py  example_opt_jax.py  ode_jax.py  plot_kink.py  plot_qfi_over_space.py  pyproject.toml  requirements.txt  run_OAT.py  run_OAT_.py  run_OAT_jax.py  run_OAT_pt.py  run_OAT_test.py  run_OAT_tf.py  setup.cfg  spin_models.py  spin_models_test.py
check/: all_.py  check_utils.py  flake8_.py  format_.py  mypy_.py
checks/: all_.py  format_.py  mypy_.py
plotting_scripts/: plot_kink.py  plot_qfi_over_space.py
qfi_opt/: __init__.py  benchmark_opt_methods.py  calculate_qfi_example.py  dissipation.py  dissipation_jax.py  dissipation_numpy.py  ode_jax.py  plot.py  spin_models.py  spin_models_test.py
qfi_opt/examples/: LBFGSB.py  benchmark_opt_methods.py  calculate_qfi.py  calculate_rho_and_grad.py  fullmatrixder2.m  get_rho_and_grad.m  lbfgs_vs_pounders_sequential.m  matt_benchmark.py  matt_example.py  matt_example_2.py  plot_qfi_over_space.py  plot_results.py  qfi_objective.m  run_fminunc.m  run_pounders.m  simulate-n-layers-QFIM.py  simulate-n-layers.py  sylvestersolve.m
qfi_opt/plotting_scripts/: plot_kink.py  plot_qfi_over_space.py
src/: benchmark_opt_methods.py  calculate_qfi_example.py  ode_jax.py  spin_models_test.py
src/plotting_scripts/: plot_qfi_over_space.py
