[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "QFI-Opt"
version = "0.0.1"
description = "This repository contains codes for optimizing the quantum fisher information (QFI) of quantum systems."
authors = [
  "Jeffrey Larson <jmlarson@anl.gov>",
  "Robert J. Lewis-Swan <lewisswan@ou.edu>",
  "Sri Hari Krishna Narayanan <snarayan@anl.gov>",
  "Michael A. Perlin <mika.perlin@gmail.com>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/jmlarson1/QFI-Opt"
keywords = ["quantum fisher information", "QFI", "quantum metrology"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python = "^3.10"
jax = ">=0.4.8"
jaxlib = ">=0.4.7"
matplotlib = ">=3.6.2"
numpy = ">=1.23.4"
scipy = ">=1.9.2"

# check script dependencies
black = { version = ">=23.1.0", optional = true, extras = ["jupyter"] }
flake8 = { version = ">=5.0.4", optional = true }
flake8-pyproject = { version = "*", optional = true }
isort = { version = ">=5.10.1", optional = true, extras = ["colors"] }
mypy = { version = ">=0.982", optional = true }
pytest = { version = ">=7.2.1", optional = true }

# example script dependencies
ibcdfo = { version = "*", optional = true }
ipdb = { version = "*", optional = true }
mpi4py = { version = "*", optional = true }
nlopt = { version = "*", optional = true }

[tool.poetry.extras]
dev = [
  "black",
  "flake8",
  "flake8-pyproject",
  "isort",
  "mypy",
  "pytest",
  "ibcdfo",
  "ipdb",
  "mpi4py",
  "nlopt",
]

# miscellaneous package configuration options

[tool.black]
color = true
line_length = 160

[tool.isort]
profile = "black"
line_length = 160
color_output = true

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
install_types = true
non_interactive = true
no_implicit_optional = true

[tool.flake8]
max-line-length = 160
max-complexity = 10
show_source = true
statistics = true
count = true
extend-ignore = [
  "E203",
  "I100",
  "I101",
  "I201",
  "I202",
] # these errors conflict with black and/or isort
